--- a/mathMC/src/main/resources/plugin.yml
+++ b/mathMC/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Pet
+name: mathMC
 main: de.litona.mathMC.Main
 version: 1.0
 author: Litona
@@ -6,3 +6,4 @@ commands:
   plot:
     description: Plot a math function with blocks
     usage: /plot (Math function)
+    permission: mathmc.plot
